# iati2json

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test_example.py
.github/workflows/: dist.yml
example/: example.json  organisation-example.json
iati2json/: __init__.py
src/: lib.rs
