[project]
name="iati2json"
description = "Iati to JSON converter"
readme="README.md"
repository="https://github.com/kindly/iati2json"
license = {text= "MIT"}
dependencies = ["xmlschema"]

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project.optional-dependencies]
dev = ["pytest"]
